@@ -1,3 +1,8 @@
+Sat Jul  3 09:13:55 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/visitors/yaml_tree.rb (visit_Time): use
+	  Time#nsec to accurately serialize time objects. [ruby-core:29233]
+
 Tue Jul  6 00:34:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* vm.c (thread_free): free altstack to prevent memory leak.  a patch
